<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/colorBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/include"
        layout="@layout/layout_toolbar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_zero_dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/include">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/_12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.location.location.views.MyCustomTextView
                    android:id="@+id/lblTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:text="@string/signup"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_18ssp"
                    app:myFontFamily="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.location.location.views.MyCustomTextView
                    android:id="@+id/lblMessage"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:text="@string/create_new_account"
                    android:textColor="@color/textColorHint"
                    android:textSize="@dimen/_10ssp"
                    app:myFontFamily="medium"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblTitle" />

                <com.location.location.views.MyCustomEditText
                    android:id="@+id/edtUsername"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_37sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/name"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="50"
                    app:myFontFamily="medium"
                    android:elevation="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="@dimen/_8sdp"
                    app:MyEdtBackgroundColor="@color/colorWhite"
                    app:MyEdtCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusTopRight="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lblMessage"/>

                <com.location.location.views.MyCustomEditText
                    android:id="@+id/edtLastname"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_37sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/last_name"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="50"
                    app:myFontFamily="medium"
                    android:elevation="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_username"
                    android:drawablePadding="@dimen/_8sdp"
                    app:MyEdtBackgroundColor="@color/colorWhite"
                    app:MyEdtCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusTopRight="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtUsername"/>

                <com.location.location.views.MyCustomEditText
                    android:id="@+id/edtMobileNumber"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_37sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_14sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/mobile_number"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:inputType="phone"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="10"
                    app:myFontFamily="medium"
                    android:elevation="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_mobile_no"
                    android:drawablePadding="@dimen/_8sdp"
                    app:MyEdtBackgroundColor="@color/colorWhite"
                    app:MyEdtCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusTopRight="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtLastname"/>

                <com.location.location.views.MyCustomEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_37sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/email"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="50"
                    app:myFontFamily="medium"
                    android:elevation="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="@dimen/_8sdp"
                    app:MyEdtBackgroundColor="@color/colorWhite"
                    app:MyEdtCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusTopRight="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtMobileNumber"/>

                <com.location.location.views.MyCustomEditText
                    android:id="@+id/edtPassword"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_37sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/password"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:inputType="textPassword"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="50"
                    app:myFontFamily="medium"
                    android:elevation="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/_8sdp"
                    app:MyEdtBackgroundColor="@color/colorWhite"
                    app:MyEdtCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusTopRight="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtEmail"/>

                <com.location.location.views.MyCustomEditText
                    android:id="@+id/edtInstitute"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_37sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/institute_name"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:inputType="text"
                    android:imeOptions="actionNext"
                    android:maxLines="1"
                    android:maxLength="50"
                    app:myFontFamily="medium"
                    android:elevation="@dimen/_4sdp"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="@dimen/_8sdp"
                    app:MyEdtBackgroundColor="@color/colorWhite"
                    app:MyEdtCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusTopRight="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtPassword"/>

                <com.location.location.views.MyCustomEditText
                    android:id="@+id/edtCountryCode"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/_37sdp"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/select_country"
                    android:textColor="@color/textColorBlack"
                    android:textSize="@dimen/_10ssp"
                    android:inputType="text"
                    android:imeOptions="actionDone"
                    android:maxLines="1"
                    android:maxLength="50"
                    app:myFontFamily="medium"
                    android:elevation="@dimen/_4sdp"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:drawableStart="@drawable/ic_password"
                    android:drawableEnd="@drawable/ic_arrow_down_orange"
                    android:drawablePadding="@dimen/_8sdp"
                    app:MyEdtBackgroundColor="@color/colorWhite"
                    app:MyEdtCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusTopRight="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyEdtCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/edtInstitute"/>

                <com.location.location.views.MyCustomTextView
                    android:id="@+id/btnCreateAccount"
                    android:layout_width="@dimen/_zero_dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:minHeight="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:paddingVertical="@dimen/_6sdp"
                    android:paddingHorizontal="@dimen/_8sdp"
                    android:textColor="@color/textColorWhite"
                    android:text="@string/create_account"
                    android:textSize="@dimen/_12ssp"
                    android:gravity="center"
                    android:fontFamily="@font/inter_semi_bold"
                    android:drawableEnd="@drawable/ic_arrow_right"
                    app:MyBackgroundColor="@color/colorOrange"
                    app:MyCorRadiusTopLeft="@dimen/_7sdp"
                    app:MyCorRadiusTopRight="@dimen/_7sdp"
                    app:MyCorRadiusBottomLeft="@dimen/_7sdp"
                    app:MyCorRadiusBottomRight="@dimen/_7sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/edtCountryCode" />

                <com.location.location.views.MyCustomTextView
                    android:id="@+id/txtSignup"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:textColor="@color/textColorHint"
                    android:textSize="@dimen/_10ssp"
                    android:text="@string/do_you_have_account"
                    android:gravity="center"
                    app:myFontFamily="medium"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnCreateAccount" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/lyProgress"
        layout="@layout/progress_view_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>